fix tokenization function to support WordPiece tokenizer